# shadow

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: .gitignore  MILESTONE.md  README.md  gdrive-implementation-plan.md  prd.md  settings.json
.claude/agents/: cicd.md  code-reviewer.md  frontend.md  rust-daemon.md  security-reviewer.md
.claude/commands/: new-feature.md
.claude/commands/release/: tag.md
.claude/commands/rust/: new-provider.md
.claude/memory/: MEMORY.md  feedback_no_python.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/provider-patterns/: SKILL.md
.claude/skills/react-patterns/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
.claude/skills/tauri-ipc/: SKILL.md
.github/workflows/: release.yml
src/: App.js  App.tsx  ipc.js  ipc.ts  types.js  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  ipc.rs  keyring_utils.rs  lib.rs  logger.rs  main.rs  oauth.rs  path_utils.rs
src-tauri/src/daemon/: debouncer.rs  filter.rs  hasher.rs  integration.rs  mod.rs  queue.rs  reconciler.rs  renamer.rs  scanner.rs  stats.rs  watcher.rs
src-tauri/src/providers/: gcs.rs  gdrive.rs  mod.rs  nas.rs  s3.rs
src/components/layout/: Layout.js  Layout.tsx  Sidebar.js  Sidebar.tsx
src/components/screens/: About.tsx  Dashboard.js  Folders.js  (+6 more)
src/hooks/: useActivityFeed.js  useActivityFeed.ts  useGlobalScanSchedule.ts  useProviderStatus.js  useProviderStatus.ts  useReconcileStatus.ts  useScanProgress.js  useScanProgress.ts  useScanSchedule.ts
src/store/: activityStore.js  activityStore.test.js  activityStore.test.ts  activityStore.ts  foldersStore.js  foldersStore.ts  providerStore.js  providerStore.ts  scanScheduleStore.ts  statsStore.js  statsStore.ts
(+7 files in other folders)
