[package]
name = "shadow"
version = "0.1.0"
description = "Real-time cross-platform file backup"
authors = []
license = ""
repository = ""
default-run = "shadow"
edition = "2021"
rust-version = "1.78"

[lib]
name = "shadow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shadow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
