[package]
name = "shadow"
version = "0.1.0"
description = "Real-time cross-platform file backup"
authors = []
license = ""
repository = ""
default-run = "shadow"
edition = "2021"
rust-version = "1.78"

[lib]
name = "shadow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shadow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
notify = "6"
blake3 = "1"
sled = "0.34"
toml = "0.8"
dirs = "5"
async-trait = "0.1"
tokio-retry = "0.3"
hostname = "0.4"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
google-cloud-storage = "0.22"
bytes = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
